# easyTTY

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  uninstall.sh
.cache/clangd/index/: Application.cpp.90D23AC5689446A4.idx  Application.hpp.B84C7154BA4AFC8C.idx  DeviceDetector.cpp.E75B1A9E9A139BAF.idx  DeviceDetector.hpp.7D6394F764DA8FEA.idx  Menu.cpp.9FFCB920D68D70F6.idx  Menu.hpp.9070D9DA5AEEA237.idx  Screen.cpp.5C89444B90D844A5.idx  Screen.hpp.26093B5832A39303.idx  Types.hpp.12E35E61DC3239F9.idx  UdevManager.cpp.81111805961422BB.idx  UdevManager.hpp.B1DA230A05E135FF.idx  Utils.cpp.E92AB7B42BB3F4D5.idx  Utils.hpp.574B51D3CC0AAD15.idx  main.cpp.76DBE2CDE3B32526.idx
include/app/: Application.hpp
include/common/: Types.hpp  Utils.hpp
include/device/: DeviceDetector.hpp
include/tui/: Menu.hpp  Screen.hpp
include/udev/: UdevManager.hpp
packaging/: build-deb.sh  build-release.sh
scripts/: easytty-reload
src/: main.cpp
src/app/: Application.cpp
src/common/: Utils.cpp
src/device/: DeviceDetector.cpp
src/tui/: Menu.cpp  Screen.cpp
src/udev/: UdevManager.cpp
